Tests/Resources/Ok/cast_as_bool.st
language core;

extend with #type-cast;

fn main(n : Nat) -> Bool {
  return 0 cast as Bool
}